--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@cyriacbr/react-split-text": "^1.0.0",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "vite-plugin-svgr": "^3.2.0"
   },
